feat: improve JSONbulk upload and Imageurls mapping.